[gd_scene load_steps=8 format=3 uid="uid://bh0px11bj17wp"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_1qnle"]
[ext_resource type="Script" uid="uid://c5k3xtq7238ht" path="res://addons/CustomControls/Dialogs/save_file_dialog.gd" id="2_2cyew"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="2_40tkc"]
[ext_resource type="PackedScene" uid="uid://1uibymv4bb3j" path="res://addons/CustomControls/custom_line_edit.tscn" id="3_2cyew"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="4_jcsr4"]

[sub_resource type="Gradient" id="Gradient_qyib2"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pk1on"]
gradient = SubResource("Gradient_qyib2")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="SaveFileDialog" type="Window"]
oversampling_override = 1.0
title = "Save File"
position = Vector2i(0, 36)
size = Vector2i(520, 195)
wrap_controls = true
exclusive = true
unresizable = true
theme = ExtResource("1_1qnle")
script = ExtResource("2_2cyew")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_pk1on")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Folder:"

[node name="Folder" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_40tkc")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "[title]Directory of storage[/title]
Select the directory where the file will be saved."
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "res://"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select File Name:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FileName" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_2cyew")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Name Of The File[/title]
Select the filename for this file."

[node name="ExtensionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.73812, 0.979417, 0.7222521, 1)
text = ".ext"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_jcsr4")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_jcsr4")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "Cancel"

[connection signal="button_down" from="MarginContainer/VBoxContainer/Folder" to="." method="_on_folder_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
